cambios fin de semana

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-navbar></app-navbar>
 <app-carousel-fb></app-carousel-fb>
-<app-facebook-media></app-facebook-media>
+<app-tiktok-carrucel></app-tiktok-carrucel>
+<app-services-section></app-services-section>
+<app-experience-section></app-experience-section>
+<app-facebook-gallery></app-facebook-gallery>
