--- a/src/styles.css
+++ b/src/styles.css
@@ -3,22 +3,28 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 /* Fondo del modal (backdrop) */
-.custom-backdrop {
-  background-color: rgba(0, 0, 0, 0.8) !important;
-  z-index: 2000 !important;
-}
+ 
 
-.fullscreen-dialog {
-  width: 100vw !important;
-  height: 100vh !important;
-  max-width: 100vw !important;
-  max-height: 100vh !important;
-  margin: 0 !important;
-  border-radius: 0 !important;
-  background-color: transparent !important;
-  z-index: 2001 !important;
+/* Hace que el modal sea fullscreen */
+  .fullscreen-dialog .mat-dialog-container {
+  width: 100vw;
+  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
+  margin: 0;
+  padding: 0;
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0.95); /* Fondo oscuro opcional */
   display: flex;
+ 
+}
+.mat-mdc-dialog-surface {
+  background-color: transparent !important;
+  box-shadow: none !important; /* Opcional: elimina sombra */
+    justify-content: center;
   align-items: center;
-  justify-content: center;
-  overflow: hidden !important;
+}
+/* Estilo del fondo del modal */
+ .custom-backdrop {
+  background-color: rgba(0, 0, 0, 0.8);
 }
