--- a/src/app/core/modals/facebook-post-modal/facebook-post-modal.component.css
+++ b/src/app/core/modals/facebook-post-modal/facebook-post-modal.component.css
@@ -1,35 +1,27 @@
-.dialog-container {
+.carousel-wrapper {
+    overflow: hidden;
+  max-height: 100%;
   width: 100%;
-  height: 100%;
+  max-width: 90vw; 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
-.dialog-content {
-  width: 90vw;
-  height: auto;
-  max-height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 0; /* padding top & bottom */
-  box-sizing: border-box;
-}
-
-/* Contenedor que mantiene la relación de aspecto */
 .aspect-wrapper {
-  width: 80%;
-  max-width: 80%; 
+  width: 100%;
+  height: 100%;
+  max-height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-/* Imagen o video se adapta sin deformarse */
 .media-element {
-  width: 100%;
-  height: 100%;
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 80vh;
   object-fit: contain;
   border-radius: 10px;
 }
