--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
  
 
 /* Hace que el modal sea fullscreen */
-  .fullscreen-dialog .mat-dialog-container {
+.fullscreen-dialog .mat-dialog-container {
   width: 100vw;
   height: 100vh;
   max-width: 100vw;
@@ -14,16 +14,23 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin: 0;
   padding: 0;
   border-radius: 0;
-  background-color: rgba(0, 0, 0, 0.95); /* Fondo oscuro opcional */
+  background-color: rgba(0, 0, 0, 0.95);
+  
   display: flex;
- 
+  flex-direction: column; /* Importante */
+  justify-content: center; /* Centrado vertical */
+  align-items: center;     /* Centrado horizontal */
+  box-sizing: border-box;
 }
+
 .mat-mdc-dialog-surface {
   background-color: transparent !important;
-  box-shadow: none !important; /* Opcional: elimina sombra */
-    justify-content: center;
+  box-shadow: none !important;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
+
 /* Estilo del fondo del modal */
  .custom-backdrop {
   background-color: rgba(0, 0, 0, 0.8);
