--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,5 @@
 <app-services-section></app-services-section>
 <app-experience-section></app-experience-section>
 <app-facebook-gallery></app-facebook-gallery>
+<app-contact-us></app-contact-us>
+<app-footer></app-footer>
