cambios de color de  backgraund

--- a/src/app/core/components/contact-us/contact-us.component.html
+++ b/src/app/core/components/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<section class="contact-section text-white py-5">
+<section class="contact-section bg-dark text-white py-5">
   <div class="container">
     <h2 class="text-center mb-4" style="color: #FFD700;">
       {{ 'CONTACT_US.TITLE' | translate }}
