--- a/src/app/core/components/tiktok-carrucel/tiktok-carrucel.component.html
+++ b/src/app/core/components/tiktok-carrucel/tiktok-carrucel.component.html
@@ -1,5 +1,6 @@
-<div style="background-color: #1A1A1A;" >
-<div class="container padding-xl-horizontal py-5" style="background-color: #1A1A1A;">
+
+<section class="bg-dark text-white py-5"  >
+  <div class="container">
 <div class="row">
     <!-- Sección de texto con Angular Material Card -->
     <div class="col-md-6 d-flex align-items-center justify-content-center min-vh-100">
@@ -33,4 +34,5 @@
     </div>
   </div>
 </div>
-</div>
+ 
+</section>
