--- a/src/app/core/components/facebook-gallery/facebook-gallery.component.html
+++ b/src/app/core/components/facebook-gallery/facebook-gallery.component.html
@@ -1,4 +1,4 @@
-<section class="bg-dark text-white py-5" style="background-color: #1A1A1A;">
+<section class="bg-dark text-white py-5" >
   <div class="container">
     <h2 class="text-center mb-5" style="color: #FFD700;">
       {{ 'FACEBOOK_GALLERY.TITLE' | translate }}
