--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<app-navbar></app-navbar>
-<app-carousel-fb></app-carousel-fb>
-<app-tiktok-carrucel></app-tiktok-carrucel>
-<app-services-section></app-services-section>
-<app-experience-section></app-experience-section>
-<app-facebook-gallery></app-facebook-gallery>
-<app-contact-us></app-contact-us>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
