creacion del banner dinamico

--- a/src/app/core/components/privacy-policy/privacy-policy.component.html
+++ b/src/app/core/components/privacy-policy/privacy-policy.component.html
@@ -1,1 +1,5 @@
+<app-banner
+  [title]="'Nuestros Servicios'"
+  [breadcrumb]="['Inicio', 'Servicios']" >
+</app-banner>
 <p>privacy-policy works!</p>
